--- a/report.html
+++ b/report.html
@@ -36,7 +36,7 @@ volunteering for administration, organising and promoting concerts and workshops
 	
 	
     <h2>Testing Details</h2>
-    <p>After Doing completing the sign up/membershit form the user will be redirected to a pay/donation page</p>
+    <p>After Doing completing the sign up/membership form the user will be redirected to a pay/donation page</p>
 	
 	
     <h2>References</h2>
